5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4176/executions/1831_1648.log
== TEST (2019-06-13 16:04:06) 
-- CODE:
from numpy import*

freq = array(eval(input("Digite: ")))
rep = 0

for elemento in freq<70:
	rep += 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:05:00) 
-- CODE:
from numpy import*

freq = array(eval(input("Digite: ")))
rep = 0

for elemento in freq<70:
	rep += 1
	
print(rep)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:05:36) 
-- CODE:
from numpy import*

freq = array(eval(input("Digite: ")))
rep = 0

for elemento in freq<70:
	rep += 1
	
print(rep)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:06:58) 
-- CODE:
from numpy import*

freq = array(eval(input("Digite: ")))
rep = 0

for elemento in range(0,size(freq)<=70:
	rep += 1
	
print(rep)
-- ERROR:
File "XXXX", line 6
    for elemento in range(0,size(freq)<=70:
                                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:07:19) 
-- CODE:
from numpy import*

freq = array(eval(input("Digite: ")))
rep = 0

for elemento in range(0,size(freq)):
	rep += 1
	
print(rep)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:08:37) 
-- CODE:
from numpy import*

freq = array(eval(input("Digite: ")))
rep = 0

for elemento in range(0,size(freq)):
	if (freq[i]<=70):
	rep += 1
	print(rep)
	
	
-- ERROR:
File "XXXX", line 8
    rep += 1
      ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:09:49) 
-- CODE:
from numpy import*

freq = array(eval(input("Digite: ")))
rep = 0

for elemento in range(0,size(freq)):
	if (freq[i]<=70):
	rep += 1
print(rep)
	
	
-- ERROR:
File "XXXX", line 8
    rep += 1
      ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:10:31) 
-- CODE:
from numpy import*

freq = array(eval(input("Digite: ")))
rep = 0

for elemento in range(0,size(freq)):
	rep += 1
print(rep)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:11:05) 
-- CODE:
from numpy import*

freq = array(eval(input("Digite: ")))
rep = 0

for elemento in range(70,size(freq)):
	rep += 1
print(rep)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:11:31) 
-- CODE:
from numpy import*

freq = array(eval(input("Digite: ")))
rep = 0

for elemento in range(<=70,size(freq)):
	rep += 1
print(rep)
	
	
-- ERROR:
File "XXXX", line 6
    for elemento in range(<=70,size(freq)):
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:11:49) 
-- CODE:
from numpy import*

freq = array(eval(input("Digite: ")))
rep = 0

for elemento in range(freq<=70,size(freq)):
	rep += 1
print(rep)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:12:06) 
-- CODE:
from numpy import*

freq = array(eval(input("Digite: ")))
rep = 0

for elemento in range(freq<=70,size(freq)):
	rep += 1
print(rep)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:13:00) 
-- CODE:
from numpy import*

freq = array(eval(input("Digite: ")))
rep = 0

for elemento in range(0,size(freq)):
	freq[1]>=70
	rep += 1
print(rep)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:13:23) 
-- CODE:
from numpy import*

freq = array(eval(input("Digite: ")))
rep = 0

for i in range(0,size(freq)):
	freq[i]>=70
	rep += 1
print(rep)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:18:45) 
-- CODE:
from numpy import*

freq = array(eval(input("Digite: ")))
rep = 0

while (freq[i]<=7):
	rep += 1
	print(rep)
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:19:20) 
-- CODE:
from numpy import*

freq = array(eval(input("Digite: ")))
rep = 0
i=0

while (freq[i]<=7):
	rep += 1
	print(rep)
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:19:46) 
-- CODE:
from numpy import*

freq = array(eval(input("Digite: ")))
rep = 0
i=0

while (freq[i]<=70):
	rep += 1
	print(rep)
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:20:00) 
-- CODE:
from numpy import*

freq = array(eval(input("Digite: ")))
rep = 0
i=0

while (freq[i]<=70):
	rep += 1
	print(rep)
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:22:58) 
-- CODE:
from numpy import*

freq = array(eval(input("Digite: ")))
rep = 0
vet = zeros(size(freq), dtype=int)


for i in range(0,size(freq)):
	freq[i]<=70
	rep += 1
	print(rep)
	
for elemento in freq:
	vet[i] = freq[i]
	print(vet)
	

	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:23:24) 
-- CODE:
from numpy import*

freq = array(eval(input("Digite: ")))
rep = 0
vet = zeros(size(freq), dtype=int)


for i in range(0,size(freq)):
	freq[i]<=70
	rep += 1
	print(rep)
	
for elemento in freq:
	vet[i] = freq[i]
	print(vet)
	

	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:23:30) 
-- CODE:
from numpy import*

freq = array(eval(input("Digite: ")))
rep = 0
vet = zeros(size(freq), dtype=int)


for i in range(0,size(freq)):
	freq[i]<=70
	rep += 1
	print(rep)
	
for elemento in freq:
	vet[i] = freq[i]
	print(vet)
	

	
	
	
-- EXECUTION TIME:
0.855815
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[0 1 4]
---- user output:
1
2
3
4
5
6
[ 0  0  0  0  0 85]
[ 0  0  0  0  0 85]
[ 0  0  0  0  0 85]
[ 0  0  0  0  0 85]
[ 0  0  0  0  0 85]
[ 0  0  0  0  0 85]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
3
[1 2 5]
---- user output:
1
2
3
4
5
6
7
[ 0  0  0  0  0  0 85]
[ 0  0  0  0  0  0 85]
[ 0  0  0  0  0  0 85]
[ 0  0  0  0  0  0 85]
[ 0  0  0  0  0  0 85]
[ 0  0  0  0  0  0 85]
[ 0  0  0  0  0  0 85]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
2
[1 2]
---- user output:
1
2
3
[ 0  0 35]
[ 0  0 35]
[ 0  0 35]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:23:39) 
-- CODE:
from numpy import*

freq = array(eval(input("Digite: ")))
rep = 0
vet = zeros(size(freq), dtype=int)


for i in range(0,size(freq)):
	freq[i]<=70
	rep += 1
	print(rep)
	
for elemento in freq:
	vet[i] = freq[i]
	print(vet)
	

	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:25:09) 
-- CODE:
from numpy import*

freq = array(eval(input("Digite: ")))
rep = 0
vet = zeros(size(freq), dtype=int)


for i in freq <= 70:
	rep += 1
	print(rep)
	
for elemento in freq:
	vet[i] = freq[i]
	print(vet)
	

	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:26:05) 
-- CODE:
from numpy import*

freq = array(eval(input("Digite: ")))
rep = 0
vet = zeros(size(freq), dtype=int)


for i in freq <= 70:
	rep += 1
	print(rep)
	
for elemento in freq:
	vet[i] = freq[i]
	print(vet)
	

	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:26:53) 
-- CODE:
from numpy import*

freq = array(eval(input("Digite: ")))
rep = 0
vet = zeros(size(freq), dtype=int)


for elemento <=7 in freq:
	rep += 1
	print(rep)
	
for elemento in freq:
	vet[i] = freq[i]
	print(vet)
	

	
	
	
-- ERROR:
File "XXXX", line 8
    for elemento <=7 in freq:
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:27:08) 
-- CODE:
from numpy import*

freq = array(eval(input("Digite: ")))
rep = 0
vet = zeros(size(freq), dtype=int)


for (elemento <=70) in freq:
	rep += 1
	print(rep)
	
for elemento in freq:
	vet[i] = freq[i]
	print(vet)
	

	
	
	
-- ERROR:
File "XXXX", line 8
    for (elemento <=70) in freq:
       ^
SyntaxError: can't assign to comparison
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:27:20) 
-- CODE:
from numpy import*

freq = array(eval(input("Digite: ")))
rep = 0
vet = zeros(size(freq), dtype=int)


for elemento in freq <= 70:
	rep += 1
	print(rep)
	
for elemento in freq:
	vet[i] = freq[i]
	print(vet)
	

	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:27:46) 
-- CODE:
from numpy import*

freq = array(eval(input("Digite: ")))
rep = 0
vet = zeros(size(freq), dtype=int)


for elemento in freq <= 70:
	rep += 1
	print(rep)
	
	for elemento in freq:
		vet[i] = freq[i]
		print(vet)
	

	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:28:09) 
-- CODE:
from numpy import*

freq = array(eval(input("Digite: ")))
rep = 0
vet = zeros(size(freq), dtype=int)


for elemento in freq <= 70:
	rep += 1
	print(rep)
	
	for elemento in freq:
		vet[elemento] = freq[i]
		print(vet)
	

	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:28:22) 
-- CODE:
from numpy import*

freq = array(eval(input("Digite: ")))
rep = 0
vet = zeros(size(freq), dtype=int)


for elemento in freq <= 70:
	rep += 1
	print(rep)
	
	for elemento in freq:
		vet[elemento] = freq[elemento]
		print(vet)
	

	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:28:53) 
-- CODE:
from numpy import*

freq = array(eval(input("Digite: ")))
rep = 0
vet = zeros(size(freq), dtype=int)


for elemento in freq <= 70:
	rep += 1
	print(rep)
	
for elemento in freq:
	vet[i] = freq[i]
	print(vet)
	

	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:40:17) 
-- CODE:
from numpy import*

freq = array(eval(input("Digite: ")))
rep = 0
vet = zeros(size(freq), dtype=int)


for elemento in freq[i] <= 70:
	rep += 1
	print(rep)
	
for elemento in freq:
	vet[i] = freq[i]
	print(vet)
	

	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:44:15) 
-- CODE:
from numpy import*

freq = array(eval(input("Digite: ")))
rep = 0
vet = zeros(size(freq), dtype=int)


for elemento in freq <= 70:
	rep += 1
	print(rep)
	
for elemento in freq:
	vet[i] = freq[i]
	print(vet)
	

	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
